# Chat_Master_Prestifilippo_Chat_Unifi

./: CMakeLists.txt  Chat.cpp  Chat.h  Chats.cpp  Chats.h  Messaggio.h  Utente.h  main.cpp
test/: CMakeLists.txt  ChatTest.cpp  ChatsTest.cpp  MessaggioTest.cpp  UtenteTest.cpp  runAlltests.cpp
